--- a/freeCodeCamp/DOOM/aula-1/style.css
+++ b/freeCodeCamp/DOOM/aula-1/style.css
@@ -5,26 +5,20 @@
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-
-    background: linear-gradient(to bottom, black, gray);
+    background-color: black;
     color: white;
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 360px;
+    margin: 60px auto 0px;
+    padding: 24px;
 
     text-align: center;
-    width: 400px;
-    border: 1px solid white;
-    padding: 50px;
 
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(155, 155, 155, 0.5);
+    border: 1px solid white;
+    border-radius: 15px;
 }
 
 h1 {
