--- a/freeCodeCamp/JSFULL/P_3/style.css
+++ b/freeCodeCamp/JSFULL/P_3/style.css
@@ -4,7 +4,6 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 3rem;
     font-weight: bold;
-
     text-align: center;
 }
 
@@ -21,19 +20,22 @@ p {
     text-align: center;
 }
 
-#start-btn {
-    padding: 30px;
-    width: 300px;
+#start-btn,
+#new-card-btn {
+    background-color: goldenrod;
+    border-radius: 5px;
+    border: none;
+    color: green;
+    cursor: pointer;
     font-size: 2rcap;
     font-weight: bolder;
-    background-color: goldenrod;
-    color: green;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
+    margin: 0.5rem;
+    padding: 20px;
+    width: 300px;
 }
-#start-btn:hover {
+#start-btn:hover,
+#new-card-btn:hover {
     background-color: hsl(43, 74%, 45%);
-    color: hsl(120, 100%, 50%);
     border: 1px solid hsl(43, 74%, 60%);
+    color: hsl(120, 100%, 50%);
 }
