--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/scss/style.scss
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/scss/style.scss
@@ -1,1 +1,18 @@
 @use "custom" as *;
+
+// IMPORT THE COMPONENTS
+@use 'components/animations';
+@use 'components/buttons';
+@use 'components/mixins';
+@use 'components/typography';
+
+// IMPORT THE SECTIONS
+@use 'sections/navbar';
+@use 'sections/intro-section';
+@use 'sections/campanies';
+@use 'sections/services';
+@use 'sections/testimonial';
+@use 'sections/faq';
+@use 'sections/portifolio';
+@use 'sections/get-started';
+@use 'sections/footer';
